Broaden positioning: school counsellors → counsellors and therapists
- Title: 'BACP Compliance Made Simple' → 'Counselling Compliance Made Simple'
- Remove all school/educational settings references throughout
- Broaden 'Who it's for' to all BACP counsellors and therapists
- Update meta description, footer, privacy policy

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PracticeKit — BACP Compliance Made Simple</title>
-  <meta name="description" content="PracticeKit is the iPad app for school counsellors that brings BACP compliance — CPD tracking, supervision logging, safeguarding records and caseload management — into one secure, private tool.">
+  <title>PracticeKit — Counselling Compliance Made Simple</title>
+  <meta name="description" content="PracticeKit is the iPad app for counsellors and therapists that brings BACP compliance — CPD tracking, supervision logging, safeguarding records and caseload management — into one secure, private tool.">
   <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
@@ -30,7 +30,7 @@
   <div class="container">
     <span class="hero-eyebrow">For BACP Members</span>
     <h1>BACP compliance,<br>made simple.</h1>
-    <p class="lead">PracticeKit brings your client caseload, CPD log, supervision record, and safeguarding notes into one secure iPad app — purpose-built for school counsellors.</p>
+    <p class="lead">PracticeKit brings your client caseload, CPD log, supervision record, and safeguarding notes into one secure iPad app — purpose-built for counsellors and therapists.</p>
     <div class="hero-actions">
       <a href="#contact" class="btn-primary">Get Early Access</a>
       <a href="#features"  class="btn-secondary">See Features</a>
@@ -127,10 +127,10 @@
       <div class="feature-card">
         <div class="feature-icon icon-blue">👥</div>
         <h3>Groups &amp; Organisations</h3>
-        <p>Working across multiple schools or settings? Organise clients by institution or programme while keeping all records in one private, secure app.</p>
+        <p>Working across multiple settings or organisations? Organise clients by institution or programme while keeping all records in one private, secure app.</p>
         <ul>
           <li>Organise clients into groups</li>
-          <li>Filter caseload by school or programme</li>
+          <li>Filter caseload by setting or programme</li>
           <li>Multi-setting support</li>
           <li>Groups never affect client records</li>
         </ul>
@@ -182,7 +182,7 @@
           <div class="compliance-badge">🔒</div>
           <div>
             <h4>Data Protection &amp; GDPR</h4>
-            <p>Purpose-built for UK GDPR Article 9 "special category" data — children's counselling records handled with maximum protection.</p>
+            <p>Purpose-built for UK GDPR Article 9 "special category" data — sensitive counselling records handled with maximum protection.</p>
           </div>
         </li>
       </ul>
@@ -202,7 +202,7 @@
     <div class="section-header">
       <span class="eyebrow">Privacy &amp; Security</span>
       <h2>Your clients' data stays on your device. Full stop.</h2>
-      <p>PracticeKit was built from the ground up for the most sensitive data a school counsellor holds — children's mental health and safeguarding records.</p>
+      <p>PracticeKit was built from the ground up for the most sensitive data a counsellor holds — clients' mental health and safeguarding records.</p>
     </div>
     <div class="privacy-panels">
 
@@ -289,9 +289,9 @@
   <div class="container">
     <div class="audience-box">
       <span class="eyebrow">Who PracticeKit is for</span>
-      <h2>Designed for qualified school counsellors</h2>
-      <p>PracticeKit is a professional practice tool for qualified counsellors and psychotherapists working in school and educational settings in the UK. It is designed to support your professional practice — not to be used directly by clients.</p>
-      <p>Whether you are a BACP member, working towards accreditation, or a qualified practitioner in a school counselling role, PracticeKit is built for you.</p>
+      <h2>Designed for qualified counsellors and therapists</h2>
+      <p>PracticeKit is a professional practice tool for qualified counsellors, psychotherapists and therapists practising in the UK. It is designed to support your professional practice — not to be used directly by clients.</p>
+      <p>Whether you are a BACP member, working towards accreditation, or a qualified practitioner in any counselling or therapy setting, PracticeKit is built for you.</p>
       <div class="not-for">
         <strong>⚠️ PracticeKit is not a medical device</strong> and does not provide clinical advice, diagnosis, or therapeutic content. It is a professional administration and compliance tool for qualified practitioners. It is not intended for use by clients, parents, or carers.
       </div>
@@ -331,7 +331,7 @@
     <div class="footer-inner">
       <div class="footer-brand">
         <div class="footer-logo">Practice<span>Kit</span></div>
-        <p>Professional practice management for school counsellors. Counselling compliance made simple.</p>
+        <p>Professional practice management for counsellors and therapists. Counselling compliance made simple.</p>
       </div>
       <div class="footer-col">
         <h4>Product</h4>
@@ -354,7 +354,7 @@
     </div>
     <div class="footer-bottom">
       <p>&copy; 2026 PracticeKit. All rights reserved.</p>
-      <p>Built for school counsellors in the UK · Not a medical device</p>
+      <p>Built for counsellors and therapists in the UK · Not a medical device</p>
     </div>
   </div>
 </footer>
