--- a/privacy.html
+++ b/privacy.html
@@ -78,7 +78,7 @@
 
       <!-- 1 -->
       <h2 id="summary">1. Plain-language summary</h2>
-      <p>PracticeKit is an iPad app designed for school counsellors. Here is what you need to know about your data, in plain English:</p>
+      <p>PracticeKit is an iPad app designed for counsellors and therapists. Here is what you need to know about your data, in plain English:</p>
 
       <div class="callout"><p>✅ <strong>Your data never leaves your device.</strong> There is no server, no cloud, no account. Everything is stored locally on your iPad only.</p></div>
 
@@ -207,7 +207,7 @@
       <h3>Intended users</h3>
       <p>PracticeKit is intended for use by:</p>
       <ul>
-        <li>Qualified counsellors and psychotherapists working in school and educational settings</li>
+        <li>Qualified counsellors, psychotherapists and therapists</li>
         <li>Practitioners working towards BACP accreditation or equivalent professional qualification</li>
         <li>Practitioners who are members of, or registered with, a recognised professional body such as BACP, UKCP, or BPC</li>
       </ul>
@@ -233,7 +233,7 @@
     <div class="footer-inner">
       <div class="footer-brand">
         <div class="footer-logo">Practice<span>Kit</span></div>
-        <p>Professional practice management for school counsellors. Counselling compliance made simple.</p>
+        <p>Professional practice management for counsellors and therapists. Counselling compliance made simple.</p>
       </div>
       <div class="footer-col">
         <h4>Product</h4>
@@ -255,7 +255,7 @@
     </div>
     <div class="footer-bottom">
       <p>&copy; 2026 PracticeKit. All rights reserved.</p>
-      <p>Built for school counsellors in the UK · Not a medical device</p>
+      <p>Built for counsellors and therapists in the UK · Not a medical device</p>
     </div>
   </div>
 </footer>
