Fix hero h1: BACP compliance → Counselling compliance

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <section class="hero">
   <div class="container">
     <span class="hero-eyebrow">For BACP Members</span>
-    <h1>BACP compliance,<br>made simple.</h1>
+    <h1>Counselling compliance,<br>made simple.</h1>
     <p class="lead">PracticeKit brings your client caseload, CPD log, supervision record, and safeguarding notes into one secure iPad app — purpose-built for counsellors and therapists.</p>
     <div class="hero-actions">
       <a href="#contact" class="btn-primary">Get Early Access</a>
